--- a/0-images-size.html
+++ b/0-images-size.html
@@ -7,6 +7,6 @@
     <link rel="stylesheet" href="style.css">
 </head>
 <body>
-    <h1>Background Images</h1>
+    <img src="./assets/Panther.jpg"> Old model car images
 </body>
 </html>
